--- a/opening.html
+++ b/opening.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>D3: Global Net Imports/Exports of the largest 3 traders</title>
-    <script type="text/javascript" src="http://d3js.org/d3.v4.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
  
     <style type="text/css">
         .label {
