Minor corrections made to language.  Fixed several busted links.

--- a/Net_Exports_Map.html
+++ b/Net_Exports_Map.html
@@ -87,7 +87,7 @@
 <body>
 
     <div id="container">
-        <h1>Many of the countries with large volumes show significant trade deficits</h1>
+        <h1>Some of these same countries with large trading volumes show significant trade deficits</h1>
 
 
         <div id="chart">
@@ -98,12 +98,12 @@
         <div id="buttons">
 
             <a href="Top10_countries.html" class="link-back-btn">Go Back to see the Top 10 Traders by Volume</a>
-            <a href="index.html" class="link-fwd-btn">What are the top exports from these countries?</a>
+            <a href="Export_Graph.html" class="link-fwd-btn">What are the top exports from these countries?</a>
 
         </div>
 
 
-        <p>The US, which was Top 3 in Volume, has a significant Trade deficit - Much of it with China, who is near the top in net exports</p>
+        <p>The US, which was Top 3 in Volume, has a significant Trade deficit - Much of it with China, who is near the top in net exports.</p>
         <div id="footer">
             <p>Data available at:<a href="https://comtrade.un.org/data/">the UN Comtrade Website.</a>  Missing or negligible data is colored gray.
         </div>
