--- a/Next_7.html
+++ b/Next_7.html
@@ -103,7 +103,7 @@
         </div>
 
 
-        <p>There is a lot of room for the 4-5% volume traders after the big 3</p>
+        <p>There are a number of smaller traders at 4-5% of total global volume trade after the big 3.</p>
         <div id="footer">
             <p>Data available at:<a href="https://comtrade.un.org/data/">the UN Comtrade Website.</a>  Missing or negligible data is colored gray.
         </div>
