--- a/Top10_countries.html
+++ b/Top10_countries.html
@@ -103,7 +103,7 @@
         </div>
 
 
-        <p>Keep in mind there are over 200 countries in the world.  This means that ~5% of all the countries control all import/export over the globe</p>
+        <p>Keep in mind there are over 200 countries in the world.  This means that ~5% of all the countries control half of all import/export volume over the globe</p>
         <div id="footer">
             <p>Data available at:<a href="https://comtrade.un.org/data/">the UN Comtrade Website.</a>  Missing or negligible data is colored gray.
         </div>
