Corrected link back to homepage

--- a/opening.html
+++ b/opening.html
@@ -97,7 +97,7 @@
 
         <div id="buttons">
 
-            <a href="https://github.com/Vaslo/vaslo.github.io" class="link-back-btn">About</a>
+            <a href="https://vaslo.github.io" class="link-back-btn">About</a>
             <a href="Next_7.html" class="link-fwd-btn">The next tier of trading partners make up...</a>
 
         </div>
